# Log

./: .gitignore  .travis.yml  CMakeLists.txt  CatLog.cpp  CatLog.h  CatLog.pro  Log.cpp  Log.h  README.md  main.cpp
.github/workflows/: android.yml  build.yml  ios.yml  macos.yml  ubuntu.yml  windows.yml
CatLog/: CMakeCache.txt  CMakeLists.txt  CatLog.pri  CatLog_Message.hpp  CatLog_Sington.cpp  CatLog_Sington.h  Makefile  cmake_install.cmake
CatLog_Sington/: CMakeCache.txt  CatLog_Sington.cpp  CatLog_Sington.h  Makefile  cmake_install.cmake
Test/: CMakeCache.txt  CMakeLists.txt  CatLog_Sington.cpp  CatLog_Sington.h  Makefile  cmake_install.cmake  test.cpp
